more 1.5. Generics, autoboxing.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@20579 91430c5f-d668-0410-9e7d-dd663366dcfd